# mentalhealthiq-66426

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  PHASE1_DATASET_GUIDE.md  docker-compose.yml  generate_synthetic_data.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: lint.yml
data/fairness_reports/: fairness_report.csv
data/models/: model.joblib  model_audit.json
data/processed/: preprocessor.joblib  test.csv  test_raw.csv  train.csv  train_raw.csv
data/raw/: appointments.csv
frontend/: globals.css  index.html  script.js  styles.css
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/fairness/: page.tsx
frontend/app/history/: page.tsx
frontend/app/metrics/: page.tsx
frontend/app/predict/: page.tsx
frontend/components/: FairnessChart.tsx  HistoryTable.tsx  Navbar.tsx  PredictionForm.tsx  SeverityChart.tsx  Sidebar.tsx  StatCard.tsx
mentalhealthiq/: api.py  db.py  fairness.py  model.py  preprocess.py
scripts/: audit_model.py  bootstrap.ps1  bootstrap.sh  bootstrap_ml.py  run-all.ps1  run-all.sh  run-api.ps1  run-api.sh  run-frontend.ps1  run-frontend.sh  setup.ps1  setup.sh
tests/: conftest.py  test_api.py  test_audit_model.py  test_fairness.py  test_model.py  test_preprocess.py
